# colloquium

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  README  README.md  TODO  autogen.sh  colloquium.desktop  configure.ac  meson.build  stylesheet.json  test.ss
.github/workflows/: main.yml
data/: app-menu.ui  colloquium.css  colloquium.desktop  colloquium.gresource.xml  colloquium.ui  default.ss  demo.md  demo.sc  demo.ss  menu-bar.ui  menus.ui  savepresentation.ui  style.css  stylesheeteditor.ui  uk.me.bitwiz.colloquium.desktop  uk.me.bitwiz.colloquium.gschema.xml
doc/: manual.lyx  presentation-tips.md
lib/: .gitignore
libstorycode/: imagestore.c  narrative.c  narrative.h  narrative_priv.h  narrative_render_cairo.c  narrative_render_cairo.h  presentation.c  presentation.h  render_cairo_common.c  render_cairo_common.h  scparse_priv.h  slide.c  slide.h  slide_priv.c  slide_priv.h  slide_render_cairo.c  slide_render_cairo.h  storycode.c  storycode.h  storycode.l  storycode.y  stylesheet.c  stylesheet.h
libstorycode/cairo/: render.c  render.h
libstorycode/gtk/: gtknarrativeview.c  gtknarrativeview.h  gtkslideview.c  gtkslideview.h  timing_ruler.c  timing_ruler.h
m4/: .gitignore  gnulib-cache.m4
po/: LINGUAS  POTFILES  colloquium.pot  de.po  en.po  meson.build
src/: boxvec.c  boxvec.h  colloquium.c  colloquium.h  debugger.c  debugger.h  default_stylesheet.sty  frame.c  frame.h  gtkslideview.c  gtkslideview.h  imagestore.c  imagestore.h  inhibit_screensaver.c  inhibit_screensaver.h  laseroverlay.c  laseroverlay.h  layout.c  layout.h  loadsave.c  loadsave.h  mainwindow.c  mainwindow.h  narrative.c  narrative.h  narrative_priv.h  narrative_window.c  narrative_window.h  notes.c  notes.h  objects.c  objects.h  pdfstorycode.c  pr_clock.c  pr_clock.h  prefswindow.c  prefswindow.h  presentation.c  presentation.h  print.c  (+59 more)
src-old/: colloquium.c  colloquium.h  debugger.h  frame.h  imagestore.c  narrative_window.c  narrative_window.h  pr_clock.c  pr_clock.h  presentation.h  sc_editor.h  sc_parse.c  sc_parse.h  slideshow.h  stylesheet.c  utils.h
tests/: .gitignore  json_test.c  meson.build  render_basic.c  render_subframe.c  render_test.c  render_test_sc1.c  storycode_test.c
