#basic_rendering = ['../src/render.c', '../src/frame.c',
#                   '../src/sc_parse.c', '../src/imagestore.c',
#                   '../src/sc_interp.c', '../src/utils.c',
#                   '../src/stylesheet.c']
#
#e = executable('storycode_test', 'storycode_test.c', '../src/sc_parse.c',
#               dependencies : [gtkdep])
#test('Simple StoryCode parsing', e)
#
#e = executable('render_basic', 'render_basic.c', basic_rendering,
#               dependencies : [gtkdep, mdep, jsondep])
#test('Simple rendering', e)
#
#e = executable('render_subframe', 'render_subframe.c', basic_rendering,
#               dependencies : [gtkdep, mdep, jsondep])
#test('Rendering with subframes', e)
#
#e = executable('json_test', 'json_test.c', '../src/sc_parse.c',
#               '../src/stylesheet.c',
#               gresources, dependencies : [mdep, jsondep, gtkdep])
#test('JSON parsing', e)
